# YKey

./: Cargo.toml  Makefile  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
crates/ykey-core/: Cargo.toml
crates/ykey-core/src/: error.rs  lib.rs  traits.rs  types.rs
crates/ykey-device/: Cargo.toml
crates/ykey-device/examples/: test_yubikey.rs
crates/ykey-device/src/: lib.rs
crates/ykey-platform/: Cargo.toml
crates/ykey-platform/src/: lib.rs
crates/ykey-protocol/: Cargo.toml
crates/ykey-protocol/src/: lib.rs  main.rs
docs/: README.md  SUMMARY.md  api-reference.md  architecture.md  development-guide.md
docs/development/: tauri-integration-guide.md
src/: index.css  index.tsx  router.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: device_manager.rs  lib.rs  main.rs
src/components/: DeviceManager.tsx
src/components/ui/: button.tsx  card.tsx  dropdown-menu.tsx
src/lib/: device-api.ts  utils.ts
src/pages/: index.tsx  manager.tsx
src/pages/manager/: dashboard.tsx  oath.tsx  openpgp.tsx  piv.tsx  settings.tsx  webauthn.tsx
