[package]
name = "ykey"
version = "0.1.0"
description = "Your Personal Cross-platform Hardware Key Manager"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ykey_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_cbor = "0.11"
anyhow = "1.0"
thiserror = "2.0"

# YKey Crates
ykey-core = { path = "../crates/ykey-core" }
ykey-device = { path = "../crates/ykey-device" }

# Async Support
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# HID Device Communication
hidapi = "2.4"
rusb = "0.9"

# FIDO2/WebAuthn Protocol
webauthn-authenticator-rs = "0.5"
ctap-hid-fido2 = "3.5"

# Cryptography
ring = "0.17"
base64 = "0.22"