[package]
name = "ykey-platform"
version = "0.1.0"
edition = "2021"
description = "Platform-specific implementations for YKey hardware security keys"
license = "MIT"
authors = ["YKey Contributors"]

[dependencies]
# Core YKey types and traits
ykey-core = { path = "../ykey-core" }

# Async runtime and traits
async-trait = { workspace = true }
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# HID device communication (cross-platform)
hidapi = { version = "2.4", optional = true }

# Platform-specific dependencies
[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["setupapi", "hidsdi", "winusb"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
io-kit-sys = "0.4"

[target.'cfg(target_os = "linux")'.dependencies]
libudev = "0.3"
nix = "0.27"

[features]
default = ["hidapi"]
hidapi = ["dep:hidapi"]
